Arguments
Adding different type of argument for IErisCommand